# manifolds-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
docs/: news.md
src/: data_gen.rs  data_struct.rs  data_structures.rs  errors.rs  init.rs  lib.rs  macros.rs  main.rs  nearest_neighbours.rs  optimiser.rs  prelude.rs  utils_math.rs
src/data/: diffusions.rs  graph.rs  init.rs  mod.rs  nearest_neighbours.rs  nearest_neighbours_gpu.rs  pacmap_pairs.rs  structures.rs  synthetic.rs
src/parametric/: batch.rs  dataset.rs  mod.rs  model.rs  parametric_train.rs
src/training/: mds_optimiser.rs  mod.rs  optimiser.rs  pacmap_optimiser.rs  parametric_train.rs  tsne_optimiser.rs  umap_optimiser_gpu.rs  umap_optimisers.rs
src/utils/: bh_tree.rs  diffusions.rs  fft.rs  macros.rs  math.rs  mds.rs  mod.rs  potentials.rs  sparse_ops.rs  traits.rs
tests/: diffusion_map_tests.rs  pacmap_tests.rs  phate_tests.rs  tsne_gpu_tests.rs  tsne_large_scale_diag.rs  tsne_tests.rs  umap_gpu_tests.rs  umap_parametric_tests.rs  umap_tests.rs  umap_tests_tests.rs
tests/commons/: mod.rs
