[package]
name = "manifolds-rs"
version = "0.1.3"
edition = "2021"
authors = ["Gregor Lueg <gregorlueg@me.com>"]
license = "MIT"
repository = "https://github.com/GregorLueg/manifolds-rs"
description = "Embedding methods implemented into Rust, starting with UMAP."

[lib]
name = "manifolds_rs"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
ann-search-rs = "0.1.3"
approx = "0.5.1"
faer = "0.23.2"
num-traits = "0.2.19"
rand = "0.9.2"
rayon = "1.11.0"
rustc-hash = "2.1.1"
thousands = "0.2.0"
