[package]
name = "manifolds-rs"
version = "0.3.9"
edition = "2021"
authors = ["Gregor Lueg <gregorlueg@me.com>"]
license = "MIT"
repository = "https://github.com/GregorLueg/manifolds-rs"
description = "Embedding methods implemented in Rust: (parametric) UMAP, tSNE, PHATE, Diffusion Map and PacMAP."

[lib]
name = "manifolds_rs"
path = "src/lib.rs"

[profile.test]
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4

[features]
## Enable parametric UMAP via the burn framework
parametric = ["burn", "serde", "bincode"]
## Enable FFT-accelerated tSNE via `fftw`
fft_tsne = ["fftw"]
## Enable GPU-accelerated tSNE and UMAP where the approximate nearest neighbour searches are GPU-accelerated
gpu = ["ann-search-rs/gpu", "cubecl"]
## Tests for large scale diagonistics - for development only!
large_scale_diagnostics = []

[dependencies]
ann-search-rs = { version = "0.4.4" }
approx = "0.5.1"
bincode = { version = "2.0.1", features = ["serde"], optional = true }
burn = { version = "0.21.0", features = [
    "dataset",
    "train",
    "flex",
], optional = true }
cubecl = { version = "0.10.0", optional = true }
faer = "0.23.2"
faer-traits = "0.23.2"
fftw = { version = "0.8.0", optional = true }
num-traits = "0.2.19"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", optional = true }
thousands = "0.2.0"
thiserror = "2.0.18"
